fix the problem showInTime text too long

--- a/visual-analysis/visual-analysis-web/src/css/leftBox.less
+++ b/visual-analysis/visual-analysis-web/src/css/leftBox.less
@@ -17,7 +17,7 @@
     height: 10px;
     border-left: 2px solid #02a6b5;
     border-top: 2px solid #02a6b5;
-    content: "";
+    content: '';
   }
   &::after {
     position: absolute;
@@ -27,7 +27,7 @@
     height: 10px;
     border-right: 2px solid #02a6b5;
     border-top: 2px solid #02a6b5;
-    content: "";
+    content: '';
   }
   .panelfooterL {
     position: absolute;
@@ -42,7 +42,7 @@
       height: 10px;
       border-left: 2px solid #02a6b5;
       border-bottom: 2px solid #02a6b5;
-      content: "";
+      content: '';
     }
     &::after {
       position: absolute;
@@ -52,7 +52,7 @@
       height: 10px;
       border-right: 2px solid #02a6b5;
       border-bottom: 2px solid #02a6b5;
-      content: "";
+      content: '';
     }
   }
   h2 {
@@ -68,10 +68,8 @@
   }
   .lineL {
     height: 3rem;
-    background-color: pink;
   }
   .pieL {
     height: 3rem;
-    background-color: pink;
   }
 }
