--- a/visual-analysis/visual-analysis-web/src/css/rightBox.less
+++ b/visual-analysis/visual-analysis-web/src/css/rightBox.less
@@ -65,14 +65,11 @@
   }
   .chartR {
     height: 3rem;
-    background-color: pink;
   }
   .lineR {
     height: 3rem;
-    background-color: pink;
   }
   .pieR {
     height: 3rem;
-    background-color: pink;
   }
 }
